src/pages/seller-add-product/seller-add-product.css
@import '../base.css';
html,
body {
    height: 100%;
}

h1 {
    color: var(--text-color);
    text-align: center;
    font-size: 2em;
    font-family: AlfaSlabOne;
    margin: 1em 0;
}

main {
    background-color: var(--background-body);
    border-radius: 1em 1em 0 0;
    min-height: 100%;
}

main>form>section:first-of-type>h2 {
    padding-top: 1em;
    text-align: center;
}

main>form>section>ul {
    list-style-type: none;
    overflow-x: auto;
    white-space: nowrap;
    margin: 0 1%;
    box-shadow: 0 1px 10px 1px var(--background-body);
}

main>form>section>ul>li {
    display: inline-block;
    margin: 1.5em 0;
    padding: 1.2em 0;
}

main>form>section>ul>li>label {
    margin: 1.5em 0.4em;
    padding: 1.2em 2em;
    background-color: whitesmoke;
    font-size: 1em;
    color: black;
    text-transform: capitalize;
    border-radius: 0.6em;
    cursor: pointer;
}

main>form>section>ul>li>input[type=checkbox]:checked+label {
    background-color: var(--primary-color);
    color: white;
}

main>form>section>ul>li>input {
    /* hidden, but visible for screen readers category name */
    clip: rect(0 0 0 0);
    height: 0;
    width: 0;
    margin: -1px;
    overflow: hidden;
}

main>form>section:nth-of-type(2) {
    margin: 0 5%;
    width: 90%;
}

main>form>section:nth-of-type(2)>h2 {
    text-align: center;
}

main>form>section:nth-of-type(2)>label {
    /* hidden, but visible for screen readers category name */
    clip: rect(1px 1px 1px 1px);
    height: 1px;
    width: 1px;
    margin: -1px;
    overflow: hidden;
    position: absolute;
}

main>form>section:nth-of-type(2)>input,
main>form>section:nth-of-type(2)>textarea,
main>form>input[type=submit] {
    margin-top: 1em;
    padding: 0.8em 0;
    width: 100%;
    font-size: 1em;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    /* TODO Font giusto */
    text-align: center;
    /* for left image */
    background-repeat: no-repeat;
    background-size: 1.5em;
    background-position: left 1em top 50%;
    border: 2px solid var(--primary-color);
    border-radius: 0.6em;
    -webkit-appearance: none;
    /* for iphone box-shadow in form */
    box-shadow: 0 0.25em 0.25em #bbb;
}

main>form>section:nth-of-type(2)>textarea::-webkit-input-placeholder {
    padding-top: 5em;
}

main>form>input[type=submit] {
    margin: 2em 5%;
    width: 90%;
    background-color: var(--primary-color);
    color: white;
    font-weight: bold;
    cursor: pointer;
}

.CodeMirror {
    margin-top: 10px !important;
    border-radius: 8px !important;
}

nav {
    z-index: 3 !important;
}

main>form>p {
    display: none;
    margin: 1.5em 10%;
    padding: .8em 1.2em;
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    font-size: 1.3em;
    text-align: center;
    color: black;
    background-color: #F2A49C;
    border-radius: .8em;
}

@media screen and (min-width: 768px) {
    main>form>section:first-of-type {
        margin: 2em 10%;
        width: 80%;
    }
    main>form>section:nth-of-type(2) {
        margin: 2em 20%;
        width: 60%;
    }
    main>form>input[type=submit] {
        margin: 2em 20%;
        width: 60%;
    }
}

@media screen and (min-width: 1024px) {
    main>form>section:first-of-type {
        margin: 2em 20%;
        width: 60%;
    }
    main>form>section:nth-of-type(2) {
        margin: 2em 30%;
        width: 40%;
    }
    main>form>input[type=submit] {
        margin: 2em 30%;
        width: 40%;
    }
}

